# AES_fault_calculator

./: .gitignore  CODEX_GOAL.txt  Cargo.toml  Makefile  README.md
.github/workflows/: pages.yml
cases/: sample.json
crates/faultcalc-cli/: Cargo.toml
crates/faultcalc-cli/src/: main.rs
crates/faultcalc-cli/tests/: cli_wasm_parity.rs
crates/faultcalc-core/: Cargo.toml
crates/faultcalc-core/src/: complex.rs  domain.rs  lib.rs  model.rs  sample.rs  solver.rs
crates/faultcalc-wasm/: Cargo.toml
crates/faultcalc-wasm/src/: lib.rs
docs/: calculation-method.md
examples/: programmatic.rs
web/: README.md  faultcalc.wasm.README.txt  index.html  index.template.html
