[workspace]
members = [
  "crates/faultcalc-core",
  "crates/faultcalc-cli",
  "crates/faultcalc-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Victor Lü / AES Engineering seed package"]
version = "0.3.0-rust-wasm"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
